# quell

./: .coveragerc  .gitignore  LICENSE  README.md  README.rst  pyproject.toml  sample.sh
.github/workflows/: docs.yml
docs/: api.rst  cli.rst  conf.py  index.rst
quell/: __init__.py  apps.py  callbacks.py  metrics.py  models.py  transforms.py  utils.py
scripts/: create_sample_data.py  preview_sample_data.py
tests/: test_apps.py  test_transforms.py  test_utils.py
